add missing file

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ db/
 geckodriver.log
 proof/
 *.jpg
-image_not_found.jpg
+!image_not_found.jpg
 old_capture_server/valkka-examples/
 sandbox.ipynb
 sandbox.py
